# SureBackup

./: CHANGELOG.md  CMakeLists.txt  README.md  STARTPOINT.txt
doc/: ARCHITECTURE.md  BUGFIX_DIALOG_VALIDATION.md  BUILD_SUCCESS_REFACTORING_NEXT.md  FOLDER_ICONS_STATUS.md  FOLDER_ICON_FIX.md  LOCALIZATION.md  REFACTORING_COMPLETE.md  REFACTORING_IMPLEMENTATION.md  REFACTORING_PLAN.md  REQUIREMENTS.md  UI_MAPPING.md  UI_REFINEMENT_COMPLETE.md  WORKER_PROGRESS_SMART_VISIBILITY.md
installer/: SureBackup.iss
src/: BackupEngine.cpp  BackupEngine.h  Configuration.h  ConsoleTester.cpp  Localization.h  main.cpp  main_minimal.cpp
src/Strategies/: BackupUtils.cpp  BackupUtils.h  ComparingBackupStrategy.cpp  ComparingBackupStrategy.h  IBackupStrategy.h  ParallelBackupStrategy.cpp  ParallelBackupStrategy.h  StandardBackupStrategy.cpp  StandardBackupStrategy.h  Types.h
src/resources/: resource.h  resource.rc
